--- a/ecommerce-adonis/package.json
+++ b/ecommerce-adonis/package.json
@@ -5,6 +5,8 @@
   "description": "Adonisjs boilerplate for API server with pre-configured JWT",
   "main": "index.js",
   "scripts": {
+    "inspect": "node --inspect server.js",
+    "debug": "adonis serve --dev --debug",
     "start": "node server.js",
     "test": "node ace test"
   },
@@ -23,7 +25,8 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {},
   "autoload": {
